--- a/renovate.json5
+++ b/renovate.json5
@@ -100,6 +100,7 @@
       "groupName": "widgetbook",
       "matchPackageNames": [
         "widgetbook",
+        "widgetbook_annotation",
         "widgetbook_generator",
       ]
     }
